--- a/first edition/sample.tex
+++ b/first edition/sample.tex
@@ -15,11 +15,11 @@
 \renewcommand{\thesection}{\zhnum{section}}
 \renewcommand{\thesubsection}{\arabic{section}.\arabic{subsection}}
 
-\title{高中化学}
+\title{高中化学梗概}
 
-\author{Chunol}
-\affiliation{First Division, 学校, 宁波, 315600, 浙江, 中国}
-\email[Chunol]{18868974680@163.com}
+\author{张轩华}
+\affiliation{First Division, 宁海海亮学校, 宁波, 315600, 浙江, 中国}
+\email[张轩华]{hsuanhuazhang@gmail.com}
 
 \addbibresource{example.bib}
 
@@ -31,7 +31,7 @@
 \CUPTWOCOL 
 
 \begin{abstract}
-这里是abstract
+abstract
 \end{abstract}
 
 \noindent  这是我的笔记
@@ -39,7 +39,8 @@
 \section*{Impact Statement}
 
 声明：
-
+该作品为学生个人作品，其不得用于商业用途\\
+该作品使用Cambridge Large1 Template
 \section{物质及其变化}
 
 \subsection{物质的分类}
